Sat, Apr 6, 2024, 8:18 PM -07:00

--- a/breakout.html
+++ b/breakout.html
@@ -16,6 +16,8 @@
         <button id="close-btn" class="btn">Close</button>
     </div>
 
+    <button id="start">
+
     <canvas id="canvas" width="800" height="600"></canvas>
 </body>
 <script src="js/breakout.js"></script>
