--- a/breakout.html
+++ b/breakout.html
@@ -16,7 +16,8 @@
         <button id="close-btn" class="btn">Close</button>
     </div>
 
-    <button id="start">
+    <button id="start" class="btn start">Start</button>
+    <button id="retry" class="btn retry">Retry</button>
 
     <canvas id="canvas" width="800" height="600"></canvas>
 </body>
