Mon, Apr 8, 2024, 9:48 AM -07:00

--- a/insect.html
+++ b/insect.html
@@ -17,7 +17,7 @@
     <ul class="insects-lists">
         <li>
             <button class="choose-insect-btn">
-                <p></p>
+                <p>Fly</p>
             </button>
         </li>
     </ul>
