Mon, Apr 8, 2024, 9:54 AM -07:00

--- a/insect.html
+++ b/insect.html
@@ -18,6 +18,23 @@
         <li>
             <button class="choose-insect-btn">
                 <p>Fly</p>
+                <img src="images/Fly.png" alt="Fly">
+            </button>
+        </li>
+        <li>
+            <button class="choose-insect-btn">
+                <p>Mosquito</p>
+                <img src="images/Mosquito.png" alt="Mosquito">
+            </button>
+        </li><li>
+            <button class="choose-insect-btn">
+                <p>Spider</p>
+                <img src="images/Spider.png" alt="Spider">
+            </button>
+        </li><li>
+            <button class="choose-insect-btn">
+                <p>Roach</p>
+                <img src="images/Roach.png" alt="Roach">
             </button>
         </li>
     </ul>
