--- a/insect.html
+++ b/insect.html
@@ -14,7 +14,7 @@
 
 <div class="screen">
     <h1>What is your "favorite" insect?</h1>
-    <ul class="insects-lists">
+    <ul class="insects-list">
         <li>
             <button class="choose-insect-btn">
                 <p>Fly</p>
