--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is my 2nd Website</h1>
     <a href="breakout.html">Breakout</a>
+    <a href="insect.html">Insect Game</a>
 </body>
 </html>
