--- a/insect.html
+++ b/insect.html
@@ -48,6 +48,11 @@
             You are playing an impossible game!!!
         </h5>
     </div>
+
+    <div class="screen win" id="win">
+        <img src="images/Lebron.jpg" alt="Lebron">
+    </div>
+
 </body>
 <script src="js/insect.js"></script>
 </html>
