Fri, Apr 12, 2024, 10:20 AM -07:00

--- a/insect.html
+++ b/insect.html
@@ -47,7 +47,7 @@
             Are you annoyed yet? <br>
             You are playing an impossible game!!!
         </h5>
-        <img src="images/Lebron.jpg" alt="Lebron">
+        <img src="images/Lebron.jpg" alt="Lebron" id="lebron" class="lebron">
     </div>
 
 
