Fri, Apr 12, 2024, 10:26 AM -07:00

--- a/insect.html
+++ b/insect.html
@@ -47,7 +47,8 @@
             Are you annoyed yet? <br>
             You are playing an impossible game!!!
         </h5>
-        <img src="images/Lebron.jpg" alt="Lebron" id="lebron" class="lebron">
+        <h6 id="lebron" class="lebron"></h6>
+        <img src="images/Lebron.jpg" alt="Lebron">
     </div>
 
 
