Fri, Apr 12, 2024, 10:27 AM -07:00

--- a/insect.html
+++ b/insect.html
@@ -47,8 +47,10 @@
             Are you annoyed yet? <br>
             You are playing an impossible game!!!
         </h5>
-        <h6 id="lebron" class="lebron"></h6>
-        <img src="images/Lebron.jpg" alt="Lebron">
+        <h6 id="lebron" class="lebron">
+            <img src="images/Lebron.jpg" alt="Lebron">
+        </h6>
+
     </div>
 
 
