--- a/insect.html
+++ b/insect.html
@@ -47,8 +47,11 @@
             Are you annoyed yet? <br>
             You are playing an impossible game!!!
         </h5>
-        <h6 id="lebron" class="lebron">
+        <h4 id="lebron" class="lebron">
             <img src="images/Lebron.jpg" alt="Lebron">
+        </h4>
+        <h6 id="lebaron" class="lebaron">
+            <img src="images/Lebaron.jpg" alt="Lebaron">
         </h6>
 
     </div>
