--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is my 2nd Website</h1>
     <a href="breakout.html">Breakout</a>
     <a href="insect.html">Insect Game</a>
+    <a href="hangman.html">Hangman</a>
 </body>
 </html>
