--- a/hangman.html
+++ b/hangman.html
@@ -32,7 +32,7 @@
             <line x1="140" y1="150" x2="160" y2="180" class="figure-part"/>
         </svg>
 
-        <div class="wrong-letter-container">
+        <div class="wrong-letters-container">
             <div id="wrong-letters">
                 <p>Wrong</p>
                 <span>e,r,t,y</span>
