--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website2</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>This is my 2nd Website</h1>
+    <div class="menu">
+        <button class="dropmenu">Work</button>
+        <div class="work">
     <a href="breakout.html">Breakout</a>
     <a href="insect.html">Insect Game</a>
     <a href="hangman.html">Hangman</a>
+</div>
+</div>
+<h1>Marcel's Website2</h1>
+<canvas id="canvas"></canvas>
+<p>
+    Help Carlos Escape From Prison!!
+  </p>
+  <p class="info">
+    ----------------Use Arrow Keys To Move-----------------
+  </p>
+  <br>
 </body>
+<script src="js/index.js"></script>
 </html>
+
