--- a/hangman.html
+++ b/hangman.html
@@ -34,7 +34,7 @@
 
         <div class="wrong-letters-container">
             <div id="wrong-letters">
-                
+
             </div>
         </div>
 
@@ -56,6 +56,16 @@
     <div class="notification-container" id="notification-container">
         <p>You have already entered this letter</p>
     </div>
+
+    <div class="menu">
+        <button class="dropmenu">Work</button>
+        <div class="work">
+            <a href="index.html">Homepage</a>
+    <a href="breakout.html">Breakout</a>
+
+    <a href="insect.html">Insect Game</a>
+</div>
+</div>
 </body>
 <script src="js/hangman.js"></script>
 </html>
