--- a/insect.html
+++ b/insect.html
@@ -56,7 +56,15 @@
 
     </div>
 
+    <div class="menu">
+        <button class="dropmenu">Work</button>
+        <div class="work">
+            <a href="index.html">Homepage</a>
+    <a href="breakout.html">Breakout</a>
 
+    <a href="hangman.html">Hangman</a>
+</div>
+</div>
 
 </body>
 <script src="js/insect.js"></script>
