--- a/breakout.html
+++ b/breakout.html
@@ -20,6 +20,15 @@
     <button id="retry" class="btn retry">Retry</button>
 
     <canvas id="canvas" width="800" height="600"></canvas>
+
+    <div class="menu">
+        <button class="dropmenu">Work</button>
+        <div class="work">
+    <a href="index.html">Homepage</a>
+    <a href="insect.html">Insect Game</a>
+    <a href="hangman.html">Hangman</a>
+</div>
+</div>
 </body>
 <script src="js/breakout.js"></script>
 </html>
